--- a/src/components/SingleItem/SingleItem.module.css
+++ b/src/components/SingleItem/SingleItem.module.css
@@ -10,11 +10,15 @@
   margin-right: 1rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 10px;
+  border: 1px;
+  border-color: rgb(255, 230, 90);
+  border-style: solid;
 }
 
 .singleItem__details {
   padding: 1rem;
   display: flex;
+  color: white;
   flex-direction: column;
   justify-content: space-between;
   color: var(--secondary-color);
@@ -24,10 +28,12 @@
 .details__price {
   font-size: 1.2rem;
   font-weight: bold;
+  color: white;
 }
 
 .details__description {
   font-size: 1rem;
+  color: white;
 }
 
 .details__addBtn {
@@ -38,6 +44,7 @@
   border: 1px solid var(--secondary-color);
   border-radius: 10px;
   font-size: 1.2rem;
+  background: purple;
   font-weight: bold;
   cursor: pointer;
   outline: none;
